bin_PROGRAMS=silentweb
silentweb_SOURCES=mempool.cpp server.cpp socket_control.cpp

noinst_HEADERS=
	allocator.h stl_allocator_impl.h 
	mempool.h vhost.h server.h server_config.h
	acceptor.h connection.h handler.h
	http_connection.h http_handler.h
	io.h os.h io_win32.h io_linux_sys_epoll.h
	acceptor.h
